--- a/.github/index.html
+++ b/.github/index.html
@@ -69,7 +69,7 @@
     </div>
         <br><br>
         
-        <div>Source &nbsp <a href="royal.uk/her-majesty-the-queen">royal.uk/her-majesty-the-queen</a></div>
+        <div>Source &nbsp <a href="http://www.royal.uk/queen-elizabeth">http:/www.royal.uk/her-majesty-the-queen</a></div>
     </div>
 
 </body>
